cli/tests/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesstring-pattern-under-patterns.yaml/results.txt
[33mBad settings format; /tmp/tmpo2f704b4 will be overriden. Contents:
has_shown_metrics_notification: true
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/string-pattern-under-patterns.yaml:4
4 |     - "foo"
  |       ^^^^^

'foo' is not of type 'object'

[ERROR] Rule parse error in rule eqeq:
 Strings are not valid under `patterns`: did you mean to write `pattern: foo` instead?
